implemented AgsSoundServer::register-soundcard-with-params()

--- a/libags.sym.in
+++ b/libags.sym.in
@@ -400,8 +400,10 @@ ags_sound_server_get_soundcard
 ags_sound_server_set_sequencer
 ags_sound_server_get_sequencer
 ags_sound_server_register_soundcard
+ags_sound_server_register_soundcard_with_params
 ags_sound_server_unregister_soundcard
 ags_sound_server_register_sequencer
+ags_sound_server_register_sequencer_with_params
 ags_sound_server_unregister_sequencer
 ags_config_get_type
 ags_config_load_defaults
