--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -1985,6 +1985,14 @@ ags_core_audio_port_flags_get_type
 ags_core_audio_port_test_flags
 ags_core_audio_port_set_flags
 ags_core_audio_port_unset_flags
+ags_core_audio_port_set_pcm_channels
+ags_core_audio_port_get_pcm_channels
+ags_core_audio_port_set_buffer_size
+ags_core_audio_port_get_buffer_size
+ags_core_audio_port_set_format
+ags_core_audio_port_get_format
+ags_core_audio_port_set_samplerate
+ags_core_audio_port_get_samplerate
 ags_core_audio_port_find
 ags_core_audio_port_register
 ags_core_audio_port_unregister
