fixed application context freed string of backend

--- a/conf/ags-core-audio.conf
+++ b/conf/ags-core-audio.conf
@@ -5,13 +5,14 @@ segmentation=4/4
 engine-mode=performance
 rt-safe=false
 gui-scale=1.0
+update-ui-timeout=0.2
 
 [soundcard-0]
 backend=core-audio
 capability=playback
 buffer-size=2048
 pcm-channels=2
-format=16
+format=float
 samplerate=44100
 device=ags-core-audio-devout-0
 use-cache=false
