--- a/libags_thread.sym.in
+++ b/libags_thread.sym.in
@@ -40,6 +40,26 @@ ags_timestamp_set_unix_time
 ags_timestamp_get_ags_offset
 ags_timestamp_set_ags_offset
 ags_timestamp_new
+ags_atomic_boolean_get
+ags_atomic_uint_get
+ags_atomic_int_get
+ags_atomic_pointer_get
+ags_atomic_boolean_set
+ags_atomic_uint_set
+ags_atomic_int_set
+ags_atomic_pointer_set
+ags_atomic_uint_or
+ags_atomic_int_or
+ags_atomic_uint_and
+ags_atomic_int_and
+ags_atomic_uint_increment
+ags_atomic_int_increment
+ags_atomic_uint_decrement
+ags_atomic_int_decrement
+ags_atomic_uint_add
+ags_atomic_int_add
+ags_atomic_uint_sub
+ags_atomic_int_sub
 ags_concurrency_provider_get_type
 ags_concurrency_provider_get_main_loop
 ags_concurrency_provider_set_main_loop
