--- a/ags/meson.build
+++ b/ags/meson.build
@@ -866,6 +866,7 @@ libags_gui_sources = files(
   'widget/ags_expander.c',
   'widget/ags_expander_set.c',
   'widget/ags_file_dialog.c',
+  'widget/ags_file_entry.c',
   'widget/ags_file_widget.c',
   'widget/ags_icon_link.c',
   'widget/ags_indicator.c',
@@ -2076,6 +2077,7 @@ libags_gui_widget_headers = [
   'widget/ags_level_box.h',
   'widget/ags_scale_box.h',
   'widget/ags_file_dialog.h',
+  'widget/ags_file_entry.h',
   'widget/ags_file_widget.h',
   'widget/ags_icon_link.h',
   'widget/ags_indicator.h',
