--- a/libags_gui.sym.in
+++ b/libags_gui.sym.in
@@ -176,6 +176,13 @@ ags_scale_box_remove_scale
 ags_scale_box_child_width_request
 ags_scale_box_child_height_request
 ags_scale_box_new
+ags_file_entry_get_type
+ags_file_entry_test_flags
+ags_file_entry_set_flags
+ags_file_entry_unset_flags
+ags_file_entry_get_filename
+ags_file_entry_set_filename
+ags_file_entry_new
 ags_icon_link_get_type
 ags_icon_link_test_flags
 ags_icon_link_set_flags
