--- a/Makefile.am
+++ b/Makefile.am
@@ -3002,7 +3002,9 @@ libgsequencer_machine_h_sources = \
 	ags/app/machine/ags_spectrometer.h \
 	ags/app/machine/ags_spectrometer_callbacks.h \
 	ags/app/machine/ags_stargazer_synth.h \
-	ags/app/machine/ags_stargazer_synth_callbacks.h
+	ags/app/machine/ags_stargazer_synth_callbacks.h \
+	ags/app/machine/ags_quantum_synth.h \
+	ags/app/machine/ags_quantum_synth_callbacks.h
 
 if WITH_LIBINSTPATCH
 libgsequencer_machine_h_sources += \
@@ -3131,7 +3133,9 @@ libgsequencer_machine_c_sources = \
 	ags/app/machine/ags_spectrometer.c \
 	ags/app/machine/ags_spectrometer_callbacks.c \
 	ags/app/machine/ags_stargazer_synth.c \
-	ags/app/machine/ags_stargazer_synth_callbacks.c
+	ags/app/machine/ags_stargazer_synth_callbacks.c \
+	ags/app/machine/ags_quantum_synth.c \
+	ags/app/machine/ags_quantum_synth_callbacks.c
 
 if WITH_LIBINSTPATCH
 libgsequencer_machine_c_sources += \
