implementing ags-fx-seq-synth

--- a/ags/meson.build
+++ b/ags/meson.build
@@ -402,6 +402,7 @@ libags_audio_sources = files(
   'audio/ags_recycling_context.c',
   'audio/ags_resample_util.c',
   'audio/ags_samplerate_process.c',
+  'audio/ags_seq_synth_util.c',
   'audio/ags_sequencer_util.c',
   'audio/ags_sf2_synth_generator.c',
   'audio/ags_sf2_synth_util.c',
@@ -541,6 +542,12 @@ libags_audio_sources = files(
   'audio/fx/ags_fx_playback_channel.c',
   'audio/fx/ags_fx_playback_channel_processor.c',
   'audio/fx/ags_fx_playback_recycling.c',
+  'audio/fx/ags_fx_seq_synth_audio.c',
+  'audio/fx/ags_fx_seq_synth_audio_processor.c',
+  'audio/fx/ags_fx_seq_synth_audio_signal.c',
+  'audio/fx/ags_fx_seq_synth_channel.c',
+  'audio/fx/ags_fx_seq_synth_channel_processor.c',
+  'audio/fx/ags_fx_seq_synth_recycling.c',
   'audio/fx/ags_fx_sf2_synth_audio.c',
   'audio/fx/ags_fx_sf2_synth_audio_processor.c',
   'audio/fx/ags_fx_sf2_synth_audio_signal.c',
@@ -1572,6 +1579,7 @@ libags_audio_audio_headers = [
   'audio/ags_recycling.h',
   'audio/ags_recycling_context.h',
   'audio/ags_resample_util.h',
+  'audio/ags_seq_synth_util.h',
   'audio/ags_sequencer_util.h',
   'audio/ags_sf2_synth_generator.h',
   'audio/ags_sf2_synth_util.h',
@@ -1728,6 +1736,12 @@ libags_audio_audio_fx_headers = [
   'audio/fx/ags_fx_playback_channel.h',
   'audio/fx/ags_fx_playback_channel_processor.h',
   'audio/fx/ags_fx_playback_recycling.h',
+  'audio/fx/ags_fx_seq_synth_audio.h',
+  'audio/fx/ags_fx_seq_synth_audio_processor.h',
+  'audio/fx/ags_fx_seq_synth_audio_signal.h',
+  'audio/fx/ags_fx_seq_synth_channel.h',
+  'audio/fx/ags_fx_seq_synth_channel_processor.h',
+  'audio/fx/ags_fx_seq_synth_recycling.h',
   'audio/fx/ags_fx_sf2_synth_audio.h',
   'audio/fx/ags_fx_sf2_synth_audio_processor.h',
   'audio/fx/ags_fx_sf2_synth_audio_signal.h',
