--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -1334,6 +1334,8 @@ ags_fx_low_pass_channel_get_type
 ags_fx_low_pass_channel_new
 ags_fx_sfz_synth_recycling_get_type
 ags_fx_sfz_synth_recycling_new
+ags_fx_seq_synth_channel_processor_get_type
+ags_fx_seq_synth_channel_processor_new
 ags_fx_sfz_synth_audio_processor_get_type
 ags_fx_sfz_synth_audio_processor_new
 ags_fx_pattern_audio_signal_get_type
@@ -1415,6 +1417,8 @@ ags_fx_low_pass_audio_get_type
 ags_fx_low_pass_audio_new
 ags_fx_alsa_mixer_audio_processor_get_type
 ags_fx_alsa_mixer_audio_processor_new
+ags_fx_seq_synth_recycling_get_type
+ags_fx_seq_synth_recycling_new
 ags_fx_high_pass_audio_processor_get_type
 ags_fx_high_pass_audio_processor_new
 ags_fx_dssi_channel_get_type
@@ -1462,6 +1466,8 @@ ags_fx_notation_audio_signal_get_type
 ags_fx_notation_audio_signal_stream_feed
 ags_fx_notation_audio_signal_notify_remove
 ags_fx_notation_audio_signal_new
+ags_fx_seq_synth_channel_get_type
+ags_fx_seq_synth_channel_new
 ags_fx_fm_synth_channel_processor_get_type
 ags_fx_fm_synth_channel_processor_new
 ags_fx_tremolo_channel_get_type
@@ -1498,12 +1504,22 @@ ags_fx_vst3_channel_load_port
 ags_fx_vst3_channel_new
 ags_fx_lv2_audio_signal_get_type
 ags_fx_lv2_audio_signal_new
+ags_fx_seq_synth_audio_get_type
+ags_fx_seq_synth_audio_scope_data_alloc
+ags_fx_seq_synth_audio_scope_data_free
+ags_fx_seq_synth_audio_channel_data_alloc
+ags_fx_seq_synth_audio_channel_data_free
+ags_fx_seq_synth_audio_input_data_alloc
+ags_fx_seq_synth_audio_input_data_free
+ags_fx_seq_synth_audio_new
 ags_fx_vst3_channel_processor_get_type
 ags_fx_vst3_channel_processor_new
 ags_fx_fm_synth_channel_get_type
 ags_fx_fm_synth_channel_new
 ags_fx_volume_channel_processor_get_type
 ags_fx_volume_channel_processor_new
+ags_fx_seq_synth_audio_processor_get_type
+ags_fx_seq_synth_audio_processor_new
 ags_fx_synth_channel_processor_get_type
 ags_fx_synth_channel_processor_new
 ags_fx_buffer_audio_processor_get_type
@@ -1591,6 +1607,8 @@ ags_fx_eq10_recycling_get_type
 ags_fx_eq10_recycling_new
 ags_fx_analyse_audio_processor_get_type
 ags_fx_analyse_audio_processor_new
+ags_fx_seq_synth_audio_signal_get_type
+ags_fx_seq_synth_audio_signal_new
 ags_fx_synth_audio_signal_get_type
 ags_fx_synth_audio_signal_new
 ags_fx_analyse_recycling_get_type
@@ -4233,6 +4251,141 @@ ags_wah_wah_util_compute
 ags_fx_factory_get_type
 ags_fx_factory_create_flags_get_type
 ags_fx_factory_create
+ags_seq_synth_util_get_type
+ags_seq_synth_util_alloc
+ags_seq_synth_util_copy
+ags_seq_synth_util_free
+ags_seq_synth_util_get_source
+ags_seq_synth_util_set_source
+ags_seq_synth_util_get_source_stride
+ags_seq_synth_util_set_source_stride
+ags_seq_synth_util_get_buffer_length
+ags_seq_synth_util_set_buffer_length
+ags_seq_synth_util_get_format
+ags_seq_synth_util_set_format
+ags_seq_synth_util_get_samplerate
+ags_seq_synth_util_set_samplerate
+ags_seq_synth_util_get_synth_oscillator_mode
+ags_seq_synth_util_set_synth_oscillator_mode
+ags_seq_synth_util_get_frequency
+ags_seq_synth_util_set_frequency
+ags_seq_synth_util_get_phase
+ags_seq_synth_util_set_phase
+ags_seq_synth_util_get_volume
+ags_seq_synth_util_set_volume
+ags_seq_synth_util_get_seq_tuning_0
+ags_seq_synth_util_set_seq_tuning_0
+ags_seq_synth_util_get_seq_tuning_1
+ags_seq_synth_util_set_seq_tuning_1
+ags_seq_synth_util_get_seq_tuning_2
+ags_seq_synth_util_set_seq_tuning_2
+ags_seq_synth_util_get_seq_tuning_3
+ags_seq_synth_util_set_seq_tuning_3
+ags_seq_synth_util_get_seq_tuning_4
+ags_seq_synth_util_set_seq_tuning_4
+ags_seq_synth_util_get_seq_tuning_5
+ags_seq_synth_util_set_seq_tuning_5
+ags_seq_synth_util_get_seq_tuning_6
+ags_seq_synth_util_set_seq_tuning_6
+ags_seq_synth_util_get_seq_tuning_7
+ags_seq_synth_util_set_seq_tuning_7
+ags_seq_synth_util_get_seq_tuning_pingpong
+ags_seq_synth_util_set_seq_tuning_pingpong
+ags_seq_synth_util_get_seq_tuning_lfo_frequency
+ags_seq_synth_util_set_seq_tuning_lfo_frequency
+ags_seq_synth_util_get_seq_volume_0
+ags_seq_synth_util_set_seq_volume_0
+ags_seq_synth_util_get_seq_volume_1
+ags_seq_synth_util_set_seq_volume_1
+ags_seq_synth_util_get_seq_volume_2
+ags_seq_synth_util_set_seq_volume_2
+ags_seq_synth_util_get_seq_volume_3
+ags_seq_synth_util_set_seq_volume_3
+ags_seq_synth_util_get_seq_volume_4
+ags_seq_synth_util_set_seq_volume_4
+ags_seq_synth_util_get_seq_volume_5
+ags_seq_synth_util_set_seq_volume_5
+ags_seq_synth_util_get_seq_volume_6
+ags_seq_synth_util_set_seq_volume_6
+ags_seq_synth_util_get_seq_volume_7
+ags_seq_synth_util_set_seq_volume_7
+ags_seq_synth_util_get_seq_volume_pingpong
+ags_seq_synth_util_set_seq_volume_pingpong
+ags_seq_synth_util_get_seq_volume_lfo_frequency
+ags_seq_synth_util_set_seq_volume_lfo_frequency
+ags_seq_synth_util_get_lfo_oscillator_mode
+ags_seq_synth_util_set_lfo_oscillator_mode
+ags_seq_synth_util_get_lfo_frequency
+ags_seq_synth_util_set_lfo_frequency
+ags_seq_synth_util_get_lfo_depth
+ags_seq_synth_util_set_lfo_depth
+ags_seq_synth_util_get_tuning
+ags_seq_synth_util_set_tuning
+ags_seq_synth_util_get_vibrato_enabled
+ags_seq_synth_util_set_vibrato_enabled
+ags_seq_synth_util_get_vibrato_gain
+ags_seq_synth_util_set_vibrato_gain
+ags_seq_synth_util_get_vibrato_lfo_depth
+ags_seq_synth_util_set_vibrato_lfo_depth
+ags_seq_synth_util_get_vibrato_lfo_freq
+ags_seq_synth_util_set_vibrato_lfo_freq
+ags_seq_synth_util_get_vibrato_tuning
+ags_seq_synth_util_set_vibrato_tuning
+ags_seq_synth_util_get_frame_count
+ags_seq_synth_util_set_frame_count
+ags_seq_synth_util_get_offset
+ags_seq_synth_util_set_offset
+ags_seq_synth_util_get_note_256th_mode
+ags_seq_synth_util_set_note_256th_mode
+ags_seq_synth_util_get_offset_256th
+ags_seq_synth_util_set_offset_256th
+ags_seq_synth_util_get_tuning_by_offset
+ags_seq_synth_util_get_volume_by_offset
+ags_seq_synth_util_compute_sin_s8
+ags_seq_synth_util_compute_sin_s16
+ags_seq_synth_util_compute_sin_s24
+ags_seq_synth_util_compute_sin_s32
+ags_seq_synth_util_compute_sin_s64
+ags_seq_synth_util_compute_sin_float
+ags_seq_synth_util_compute_sin_double
+ags_seq_synth_util_compute_sin_complex
+ags_seq_synth_util_compute_sin
+ags_seq_synth_util_compute_sawtooth_s8
+ags_seq_synth_util_compute_sawtooth_s16
+ags_seq_synth_util_compute_sawtooth_s24
+ags_seq_synth_util_compute_sawtooth_s32
+ags_seq_synth_util_compute_sawtooth_s64
+ags_seq_synth_util_compute_sawtooth_float
+ags_seq_synth_util_compute_sawtooth_double
+ags_seq_synth_util_compute_sawtooth_complex
+ags_seq_synth_util_compute_sawtooth
+ags_seq_synth_util_compute_triangle_s8
+ags_seq_synth_util_compute_triangle_s16
+ags_seq_synth_util_compute_triangle_s24
+ags_seq_synth_util_compute_triangle_s32
+ags_seq_synth_util_compute_triangle_s64
+ags_seq_synth_util_compute_triangle_float
+ags_seq_synth_util_compute_triangle_double
+ags_seq_synth_util_compute_triangle_complex
+ags_seq_synth_util_compute_triangle
+ags_seq_synth_util_compute_square_s8
+ags_seq_synth_util_compute_square_s16
+ags_seq_synth_util_compute_square_s24
+ags_seq_synth_util_compute_square_s32
+ags_seq_synth_util_compute_square_s64
+ags_seq_synth_util_compute_square_float
+ags_seq_synth_util_compute_square_double
+ags_seq_synth_util_compute_square_complex
+ags_seq_synth_util_compute_square
+ags_seq_synth_util_compute_impulse_s8
+ags_seq_synth_util_compute_impulse_s16
+ags_seq_synth_util_compute_impulse_s24
+ags_seq_synth_util_compute_impulse_s32
+ags_seq_synth_util_compute_impulse_s64
+ags_seq_synth_util_compute_impulse_float
+ags_seq_synth_util_compute_impulse_double
+ags_seq_synth_util_compute_impulse_complex
+ags_seq_synth_util_compute_impulse
 ags_volume_util_get_type
 ags_volume_util_alloc
 ags_volume_util_copy
