--- a/docs/reference/libags-audio/AgsAudio.conf.in
+++ b/docs/reference/libags-audio/AgsAudio.conf.in
@@ -3,9 +3,9 @@ version = "@VERSION@"
 description = "Advanced Gtk+ Sequencer Audio"
 authors = "AGS Development Team"
 license = "GPL-3-or-later"
-browse_url = "http://git.savannah.nongnu.org/cgit/gsequencer.git"
-repository_url = "http://git.savannah.nongnu.org/cgit/gsequencer.git"
-website_url = "http://nongnu.org/gsequencer"
+browse_url = "https://git.savannah.nongnu.org/cgit/gsequencer.git"
+repository_url = "https://git.savannah.nongnu.org/cgit/gsequencer.git"
+website_url = "https://nongnu.org/gsequencer"
 logo_url = "ags.svg"
 dependencies = [
   "GObject-2.0",
@@ -27,7 +27,7 @@ docs_url = "https://docs.gtk.org/gobject/"
 [dependencies."Libsoup-3.0"]
 name = "Libsoup"
 description = "HTTP client/server library for GNOME"
-docs_url = "https://libsoup.org/libsoup-3.0/index.html"
+docs_url = "https://libsoup.gnome.org/libsoup-3.0/index.html"
 
 [dependencies."Ags-5.0"]
 name = "Ags"
