--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -2332,6 +2332,37 @@ ags_recall_channel_run_set_destination
 ags_recall_channel_run_get_source
 ags_recall_channel_run_set_source
 ags_recall_channel_run_new
+ags_low_pass_filter_util_get_type
+ags_low_pass_filter_util_alloc
+ags_low_pass_filter_util_copy
+ags_low_pass_filter_util_free
+ags_low_pass_filter_util_get_source
+ags_low_pass_filter_util_set_source
+ags_low_pass_filter_util_get_source_stride
+ags_low_pass_filter_util_set_source_stride
+ags_low_pass_filter_util_get_destination
+ags_low_pass_filter_util_set_destination
+ags_low_pass_filter_util_get_destination_stride
+ags_low_pass_filter_util_set_destination_stride
+ags_low_pass_filter_util_get_buffer_length
+ags_low_pass_filter_util_set_buffer_length
+ags_low_pass_filter_util_get_format
+ags_low_pass_filter_util_set_format
+ags_low_pass_filter_util_get_samplerate
+ags_low_pass_filter_util_set_samplerate
+ags_low_pass_filter_util_get_cut_off_frequency
+ags_low_pass_filter_util_set_cut_off_frequency
+ags_low_pass_filter_util_get_filter_gain
+ags_low_pass_filter_util_set_filter_gain
+ags_low_pass_filter_util_process_s8
+ags_low_pass_filter_util_process_s16
+ags_low_pass_filter_util_process_s24
+ags_low_pass_filter_util_process_s32
+ags_low_pass_filter_util_process_s64
+ags_low_pass_filter_util_process_float
+ags_low_pass_filter_util_process_double
+ags_low_pass_filter_util_process_complex
+ags_low_pass_filter_util_process
 ags_stop_sequencer_get_type
 ags_stop_sequencer_new
 ags_seek_soundcard_get_type
@@ -3597,6 +3628,59 @@ ags_midi_ci_1_1_port_get_type
 ags_midi_ci_1_1_port_inquiry
 ags_midi_ci_1_1_port_respond
 ags_midi_ci_1_1_port_new
+ags_amplifier_util_get_type
+ags_amplifier_util_alloc
+ags_amplifier_util_copy
+ags_amplifier_util_free
+ags_amplifier_util_get_source
+ags_amplifier_util_set_source
+ags_amplifier_util_get_source_stride
+ags_amplifier_util_set_source_stride
+ags_amplifier_util_get_destination
+ags_amplifier_util_set_destination
+ags_amplifier_util_get_destination_stride
+ags_amplifier_util_set_destination_stride
+ags_amplifier_util_get_buffer_length
+ags_amplifier_util_set_buffer_length
+ags_amplifier_util_get_format
+ags_amplifier_util_set_format
+ags_amplifier_util_get_samplerate
+ags_amplifier_util_set_samplerate
+ags_amplifier_util_get_amp_0_frequency
+ags_amplifier_util_set_amp_0_frequency
+ags_amplifier_util_get_amp_0_bandwidth
+ags_amplifier_util_set_amp_0_bandwidth
+ags_amplifier_util_get_amp_0_gain
+ags_amplifier_util_set_amp_0_gain
+ags_amplifier_util_get_amp_1_frequency
+ags_amplifier_util_set_amp_1_frequency
+ags_amplifier_util_get_amp_1_bandwidth
+ags_amplifier_util_set_amp_1_bandwidth
+ags_amplifier_util_get_amp_1_gain
+ags_amplifier_util_set_amp_1_gain
+ags_amplifier_util_get_amp_2_frequency
+ags_amplifier_util_set_amp_2_frequency
+ags_amplifier_util_get_amp_2_bandwidth
+ags_amplifier_util_set_amp_2_bandwidth
+ags_amplifier_util_get_amp_2_gain
+ags_amplifier_util_set_amp_2_gain
+ags_amplifier_util_get_amp_3_frequency
+ags_amplifier_util_set_amp_3_frequency
+ags_amplifier_util_get_amp_3_bandwidth
+ags_amplifier_util_set_amp_3_bandwidth
+ags_amplifier_util_get_amp_3_gain
+ags_amplifier_util_set_amp_3_gain
+ags_amplifier_util_get_filter_gain
+ags_amplifier_util_set_filter_gain
+ags_amplifier_util_process_s8
+ags_amplifier_util_process_s16
+ags_amplifier_util_process_s24
+ags_amplifier_util_process_s32
+ags_amplifier_util_process_s64
+ags_amplifier_util_process_float
+ags_amplifier_util_process_double
+ags_amplifier_util_process_complex
+ags_amplifier_util_process
 ags_track_get_type
 ags_track_flags_get_type
 ags_track_get_obj_mutex
