--- a/ags/meson.build
+++ b/ags/meson.build
@@ -390,6 +390,7 @@ libags_audio_sources = files(
   'audio/ags_preset.c',
   'audio/ags_program.c',
   'audio/ags_program_control_name_key_manager.c',
+  'audio/ags_raven_synth_util.c',
   'audio/ags_recall_audio.c',
   'audio/ags_recall_audio_run.c',
   'audio/ags_recall_audio_signal.c',
@@ -544,6 +545,12 @@ libags_audio_sources = files(
   'audio/fx/ags_fx_playback_channel.c',
   'audio/fx/ags_fx_playback_channel_processor.c',
   'audio/fx/ags_fx_playback_recycling.c',
+  'audio/fx/ags_fx_raven_synth_audio.c',
+  'audio/fx/ags_fx_raven_synth_audio_processor.c',
+  'audio/fx/ags_fx_raven_synth_audio_signal.c',
+  'audio/fx/ags_fx_raven_synth_channel.c',
+  'audio/fx/ags_fx_raven_synth_channel_processor.c',
+  'audio/fx/ags_fx_raven_synth_recycling.c',
   'audio/fx/ags_fx_seq_synth_audio.c',
   'audio/fx/ags_fx_seq_synth_audio_processor.c',
   'audio/fx/ags_fx_seq_synth_audio_signal.c',
@@ -1570,6 +1577,7 @@ libags_audio_audio_headers = [
   'audio/ags_preset.h',
   'audio/ags_program.h',
   'audio/ags_program_control_name_key_manager.h',
+  'audio/ags_raven_synth_util.h',
   'audio/ags_recall.h',
   'audio/ags_recall_audio.h',
   'audio/ags_recall_audio_run.h',
@@ -1740,6 +1748,12 @@ libags_audio_audio_fx_headers = [
   'audio/fx/ags_fx_playback_channel.h',
   'audio/fx/ags_fx_playback_channel_processor.h',
   'audio/fx/ags_fx_playback_recycling.h',
+  'audio/fx/ags_fx_raven_synth_audio.h',
+  'audio/fx/ags_fx_raven_synth_audio_processor.h',
+  'audio/fx/ags_fx_raven_synth_audio_signal.h',
+  'audio/fx/ags_fx_raven_synth_channel.h',
+  'audio/fx/ags_fx_raven_synth_channel_processor.h',
+  'audio/fx/ags_fx_raven_synth_recycling.h',
   'audio/fx/ags_fx_seq_synth_audio.h',
   'audio/fx/ags_fx_seq_synth_audio_processor.h',
   'audio/fx/ags_fx_seq_synth_audio_signal.h',
