--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -1297,6 +1297,14 @@ ags_fx_lfo_audio_get_type
 ags_fx_lfo_audio_new
 ags_fx_star_synth_channel_processor_get_type
 ags_fx_star_synth_channel_processor_new
+ags_fx_raven_synth_audio_get_type
+ags_fx_raven_synth_audio_scope_data_alloc
+ags_fx_raven_synth_audio_scope_data_free
+ags_fx_raven_synth_audio_channel_data_alloc
+ags_fx_raven_synth_audio_channel_data_free
+ags_fx_raven_synth_audio_input_data_alloc
+ags_fx_raven_synth_audio_input_data_free
+ags_fx_raven_synth_audio_new
 ags_fx_two_pass_aliase_channel_get_type
 ags_fx_two_pass_aliase_channel_input_data_alloc
 ags_fx_two_pass_aliase_channel_input_data_free
@@ -1425,6 +1433,8 @@ ags_fx_high_pass_audio_processor_new
 ags_fx_dssi_channel_get_type
 ags_fx_dssi_channel_load_port
 ags_fx_dssi_channel_new
+ags_fx_raven_synth_audio_processor_get_type
+ags_fx_raven_synth_audio_processor_new
 ags_fx_buffer_channel_get_type
 ags_fx_buffer_channel_input_data_alloc
 ags_fx_buffer_channel_input_data_free
@@ -1489,6 +1499,8 @@ ags_fx_buffer_audio_signal_get_type
 ags_fx_buffer_audio_signal_new
 ags_fx_pattern_recycling_get_type
 ags_fx_pattern_recycling_new
+ags_fx_raven_synth_recycling_get_type
+ags_fx_raven_synth_recycling_new
 ags_fx_peak_audio_signal_get_type
 ags_fx_peak_audio_signal_new
 ags_fx_high_pass_recycling_get_type
@@ -1594,6 +1606,8 @@ ags_fx_sfz_synth_channel_processor_get_type
 ags_fx_sfz_synth_channel_processor_new
 ags_fx_low_pass_recycling_get_type
 ags_fx_low_pass_recycling_new
+ags_fx_raven_synth_channel_processor_get_type
+ags_fx_raven_synth_channel_processor_new
 ags_fx_sfz_synth_audio_get_type
 ags_fx_sfz_synth_audio_scope_data_alloc
 ags_fx_sfz_synth_audio_scope_data_free
@@ -1602,6 +1616,8 @@ ags_fx_sfz_synth_audio_channel_data_free
 ags_fx_sfz_synth_audio_input_data_alloc
 ags_fx_sfz_synth_audio_input_data_free
 ags_fx_sfz_synth_audio_new
+ags_fx_raven_synth_channel_get_type
+ags_fx_raven_synth_channel_new
 ags_fx_lfo_recycling_get_type
 ags_fx_lfo_recycling_new
 ags_fx_eq10_recycling_get_type
@@ -1622,6 +1638,8 @@ ags_fx_lfo_channel_input_data_free
 ags_fx_lfo_channel_new
 ags_fx_sf2_synth_recycling_get_type
 ags_fx_sf2_synth_recycling_new
+ags_fx_raven_synth_audio_signal_get_type
+ags_fx_raven_synth_audio_signal_new
 ags_fx_notation_audio_processor_get_type
 ags_fx_notation_audio_processor_key_on
 ags_fx_notation_audio_processor_key_off
@@ -4057,6 +4075,121 @@ ags_synth_util_compute_impulse_float
 ags_synth_util_compute_impulse_double
 ags_synth_util_compute_impulse_complex
 ags_synth_util_compute_impulse
+ags_raven_synth_util_get_type
+ags_raven_synth_util_alloc
+ags_raven_synth_util_copy
+ags_raven_synth_util_free
+ags_raven_synth_util_get_source
+ags_raven_synth_util_set_source
+ags_raven_synth_util_get_source_stride
+ags_raven_synth_util_set_source_stride
+ags_raven_synth_util_get_buffer_length
+ags_raven_synth_util_set_buffer_length
+ags_raven_synth_util_get_format
+ags_raven_synth_util_set_format
+ags_raven_synth_util_get_samplerate
+ags_raven_synth_util_set_samplerate
+ags_raven_synth_util_get_synth_oscillator_mode
+ags_raven_synth_util_set_synth_oscillator_mode
+ags_raven_synth_util_get_frequency
+ags_raven_synth_util_set_frequency
+ags_raven_synth_util_get_phase
+ags_raven_synth_util_set_phase
+ags_raven_synth_util_get_volume
+ags_raven_synth_util_set_volume
+ags_raven_synth_util_get_seq_tuning
+ags_raven_synth_util_set_seq_tuning
+ags_raven_synth_util_get_seq_tuning_pingpong
+ags_raven_synth_util_set_seq_tuning_pingpong
+ags_raven_synth_util_get_seq_tuning_lfo_frequency
+ags_raven_synth_util_set_seq_tuning_lfo_frequency
+ags_raven_synth_util_get_seq_volume
+ags_raven_synth_util_set_seq_volume
+ags_raven_synth_util_get_seq_volume_pingpong
+ags_raven_synth_util_set_seq_volume_pingpong
+ags_raven_synth_util_get_seq_volume_lfo_frequency
+ags_raven_synth_util_set_seq_volume_lfo_frequency
+ags_raven_synth_util_get_lfo_oscillator_mode
+ags_raven_synth_util_set_lfo_oscillator_mode
+ags_raven_synth_util_get_lfo_frequency
+ags_raven_synth_util_set_lfo_frequency
+ags_raven_synth_util_get_lfo_depth
+ags_raven_synth_util_set_lfo_depth
+ags_raven_synth_util_get_tuning
+ags_raven_synth_util_set_tuning
+ags_raven_synth_util_get_sync_enabled
+ags_raven_synth_util_set_sync_enabled
+ags_raven_synth_util_get_sync_relative_attack_factor
+ags_raven_synth_util_set_sync_relative_attack_factor
+ags_raven_synth_util_get_sync_attack
+ags_raven_synth_util_set_sync_attack
+ags_raven_synth_util_get_sync_phase
+ags_raven_synth_util_set_sync_phase
+ags_raven_synth_util_get_vibrato_enabled
+ags_raven_synth_util_set_vibrato_enabled
+ags_raven_synth_util_get_vibrato_gain
+ags_raven_synth_util_set_vibrato_gain
+ags_raven_synth_util_get_vibrato_lfo_depth
+ags_raven_synth_util_set_vibrato_lfo_depth
+ags_raven_synth_util_get_vibrato_lfo_freq
+ags_raven_synth_util_set_vibrato_lfo_freq
+ags_raven_synth_util_get_vibrato_tuning
+ags_raven_synth_util_set_vibrato_tuning
+ags_raven_synth_util_get_frame_count
+ags_raven_synth_util_set_frame_count
+ags_raven_synth_util_get_offset
+ags_raven_synth_util_set_offset
+ags_raven_synth_util_get_note_256th_mode
+ags_raven_synth_util_set_note_256th_mode
+ags_raven_synth_util_get_offset_256th
+ags_raven_synth_util_set_offset_256th
+ags_raven_synth_util_get_tuning_by_offset
+ags_raven_synth_util_get_volume_by_offset
+ags_raven_synth_util_compute_sin_s8
+ags_raven_synth_util_compute_sin_s16
+ags_raven_synth_util_compute_sin_s24
+ags_raven_synth_util_compute_sin_s32
+ags_raven_synth_util_compute_sin_s64
+ags_raven_synth_util_compute_sin_float
+ags_raven_synth_util_compute_sin_double
+ags_raven_synth_util_compute_sin_complex
+ags_raven_synth_util_compute_sin
+ags_raven_synth_util_compute_sawtooth_s8
+ags_raven_synth_util_compute_sawtooth_s16
+ags_raven_synth_util_compute_sawtooth_s24
+ags_raven_synth_util_compute_sawtooth_s32
+ags_raven_synth_util_compute_sawtooth_s64
+ags_raven_synth_util_compute_sawtooth_float
+ags_raven_synth_util_compute_sawtooth_double
+ags_raven_synth_util_compute_sawtooth_complex
+ags_raven_synth_util_compute_sawtooth
+ags_raven_synth_util_compute_triangle_s8
+ags_raven_synth_util_compute_triangle_s16
+ags_raven_synth_util_compute_triangle_s24
+ags_raven_synth_util_compute_triangle_s32
+ags_raven_synth_util_compute_triangle_s64
+ags_raven_synth_util_compute_triangle_float
+ags_raven_synth_util_compute_triangle_double
+ags_raven_synth_util_compute_triangle_complex
+ags_raven_synth_util_compute_triangle
+ags_raven_synth_util_compute_square_s8
+ags_raven_synth_util_compute_square_s16
+ags_raven_synth_util_compute_square_s24
+ags_raven_synth_util_compute_square_s32
+ags_raven_synth_util_compute_square_s64
+ags_raven_synth_util_compute_square_float
+ags_raven_synth_util_compute_square_double
+ags_raven_synth_util_compute_square_complex
+ags_raven_synth_util_compute_square
+ags_raven_synth_util_compute_impulse_s8
+ags_raven_synth_util_compute_impulse_s16
+ags_raven_synth_util_compute_impulse_s24
+ags_raven_synth_util_compute_impulse_s32
+ags_raven_synth_util_compute_impulse_s64
+ags_raven_synth_util_compute_impulse_float
+ags_raven_synth_util_compute_impulse_double
+ags_raven_synth_util_compute_impulse_complex
+ags_raven_synth_util_compute_impulse
 ags_program_get_type
 ags_program_flags_get_type
 ags_program_get_obj_mutex
