implemented ags-fx-raven-synth

--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -2372,6 +2372,8 @@ ags_low_pass_filter_util_get_cut_off_frequency
 ags_low_pass_filter_util_set_cut_off_frequency
 ags_low_pass_filter_util_get_filter_gain
 ags_low_pass_filter_util_set_filter_gain
+ags_low_pass_filter_util_get_no_clip
+ags_low_pass_filter_util_set_no_clip
 ags_low_pass_filter_util_process_s8
 ags_low_pass_filter_util_process_s16
 ags_low_pass_filter_util_process_s24
